Fixed wrap
For window sizes less than 1300px, the min and max width will now be
fixed to 90% width of the window.

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -384,6 +384,7 @@ textarea.notes
     margin-right: auto;
     margin-left: auto;
 	min-width: 90vw;
+	max-width: 90vw;
 }
 
 .item-display.is-corrupted
